--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://p-heeb.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Blog'
